tests/rosetta/out/Smalltalk/create-an-html-table.out
/tmp/create-an-html-table.st:5: parse error, expected ']'
