tests/rosetta/out/Smalltalk/create-an-html-table.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| main rows i idx row |
main := [ rows := {}.
0 to: 4 do: [:i |.
rows := rows copyWith: {(i * 3). (((i * 3)) + 1). (((i * 3)) + 2)}.
].
.
Transcript show: '<table>'; cr.
Transcript show: '    <tr><th></th><th>X</th><th>Y</th><th>Z</th></tr>'; cr.
idx := 0.
rows do: [:row |.
Transcript show: ((((((((((((((((('    <tr><td>') + ((idx asString)))) + '</td><td>')) + ((row at: 0 asString)))) + '</td><td>')) + ((row at: 1 asString)))) + '</td><td>')) + ((row at: 2 asString)))) + '</td></tr>')) printString; cr.
idx := (idx + 1).
].
.
Transcript show: '</table>'; cr. ].
main value.
